# irae

./: Cargo.toml  README.md  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: debug.rs  estimate.rs  infer.rs  lib.rs  rollout.rs  term.rs
