[package]
name = "irae"
description = "raging rollout tracker"
version = "0.1.0"
edition = "2021"
authors = [
    "clux <sszynrae@gmail.com>",
]
license = "Apache-2.0"
readme = "./README.md"
repository = "https://github.com/clux/irae"
keywords = ["kubernetes", "rollout"]
categories = ["command-line-utilities", "parsing"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/irae-{ target }{ archive-suffix }"
bin-dir = "irae-{ target }/{ bin }{ format }"

[lib]
name = "irae"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.38.1", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
kube = { version = "0.93.1", features = ["runtime"] }
thiserror = "1.0.63"
chrono = { version = "0.4.38", default-features = false }
time = { version = "0.3.36", features = ["serde-well-known", "macros"] }
semver = "1.0.23"
k8s-openapi = { version = "0.22.0", features = ["latest"] }
tracing = "0.1.40"
