[package]
name = "irae"
description = "raging rollout tracker"
version = "0.1.0"
edition = "2021"
authors = [
    "clux <sszynrae@gmail.com>",
]
license = "Apache-2.0"
readme = "./README.md"
repository = "https://github.com/clux/irae"
keywords = ["kubernetes", "rollout"]
categories = ["command-line-utilities", "parsing"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/irae-{ target }{ archive-suffix }"
bin-dir = "irae-{ target }/{ bin }{ format }"

[lib]
name = "irae"
path = "src/lib.rs"

[[bin]]
name = "irt"
required-features = ["term"]
path = "src/bin/irt.rs"

[features]
# term def while developing because otherwise LSP is annoyingly bad
# should ideally not have this on during library publish, so lib users do not have to pull in cli deps
# maybe factor into workspace later instead
default = ["term"]
term = ["indicatif", "tracing-subscriber", "clap", "clap_complete", "anyhow", "libc"]

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
kube = { version = "0.97.0", features = ["runtime"] }
thiserror = "2.0.7"
chrono = { version = "0.4.38", default-features = false }
time = { version = "0.3.37", features = ["serde-well-known", "macros"] }
semver = "1.0.24"
k8s-openapi = { version = "0.23.0", features = ["latest"] }
indicatif = { version = "0.17.9", optional = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", optional = true }
clap = { version = "4.5", features = ["cargo", "derive"], optional = true }
clap_complete = { version = "4.5", optional = true }
anyhow = { version = "1.0.94", optional = true }
libc = { version = "0.2.167", optional = true }
